# SecAI_OS

./: .gitattributes  .gitignore  .hadolint.yaml  .semgrep.yml  .upstreams.lock.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SUPPORT.md  cosign.pub  llms-full.txt  llms.txt  requirements-ci.txt  secai-sandbox.cmd
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yml  branch-protection.md  container-pin-waivers.json  dependabot.yml  vuln-waivers.json
docs/: api.md  architecture.md  audit-quick-path.md  compatibility-matrix.md  faq.md  glossary.md  m5-control-matrix.md  non-goals.md  policy-schema.md  production-operations.md  production-readiness-checklist.md  recovery-runbook.md  release-artifacts.json  release-policy.md  roadmap-security-hardening.md  sample-release-bundle.md  security-status.md  security-test-matrix.md  service-diagram.md  slos.md  supply-chain-provenance.md  support-lifecycle.md  telemetry-policy.md  test-counts.json  test-matrix.md  threat-model.md  why-is-this-safe.md
examples/: add-model-source.md  enable-web-search.md  import-gguf-model.md  lock-unlock-vault.md  promote-through-quarantine.md  recover-failed-update.md  run-fully-offline.md  sample-policy.yaml  vm-vs-bare-metal.md
recipes/: recipe.yml
release-keys/: README.md
schemas/: appliance.schema.json  openapi.yaml  (+1 more)
services/quarantine/: Containerfile  Containerfile.sandbox  pyproject.toml
services/quarantine/quarantine/: pipeline.py  watcher.py
services/quarantine/quarantine/yara_rules/: secure_ai_default.yar
(+323 files in other folders)
